Add query satisfaction annotation.

--- a/templates/annotation.html
+++ b/templates/annotation.html
@@ -4000,6 +4000,13 @@
 </div>
 
 <div class="annotation_footer">
+    <div style="margin-bottom: 10px">
+        <div>
+            当前查询对搜索结果的满意程度:
+        </div>
+        <div id="query_annotation"></div>
+        <div><p></p></div>
+    </div>
     <button class="WCOverButton button blue close-reveal-modal"  type="Button" onclick="over_button_on_click();">浏览完成</button>
 </div>
 </body>
