change tasks view and log javascipts
1.shuffle tasks
2.record absolute timestamp in log, not the time from search begin.

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -33,7 +33,7 @@
 <div class="annotation_cell">
 <img class="check" src="/static/conf/img/check.jpg">
 <div>
-<h2> 第 {{ item.task_id }} 个标注任务</h2>
+<h2> 第 {{ forloop.counter }} 个标注任务</h2>
     <p>任务描述：{{ item.content }}</p>
     <p>初始查询： {{ item.init_query }}</p>
     <a class="annotation_link" href ='/search/{{ item.task_id }}/{{ item.init_query }}/1' target="_blank">点击这里开始</a>
