--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -36,7 +36,7 @@
 <h2> 第 {{ forloop.counter }} 个标注任务</h2>
     <p>任务描述：{{ item.content }}</p>
     <p>初始查询： {{ item.init_query }}</p>
-    <a class="annotation_link" href ='/search/{{ item.task_id }}/{{ item.init_query }}/1' target="_blank">点击这里开始</a>
+    <a class="annotation_link" href ='/description/{{ item.task_id }}/{{ item.init_query }}/' target="_blank">点击这里开始</a>
 </div>
 </div>
 {% endfor %}
